--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,43 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Task Master</title>
+<title>Infra Forms</title>
 {% endblock %}
 
 
 {% block body %}
 <div class="content">
-    <h1>Task Master</h1>
+    <h1 style="text-align: center">Infra Forms</h1>
 
-    <table border="1">
+    <table>
         <tr>
-            <th>Task</th>
-            <th>Addes</th>
+            <th>ID</th>
+            <th>Description</th>
+            <th>Name</th>
+            <th>Host</th>
+            <th>IP</th>
+            <th>Date</th>
             <th>Actions</th>
         </tr>
-        {% for task in tasks %}
+        {% for form in forms %}
         <tr>
-            <td>{{ task.content }}</td>
-            <td>{{ task.date_created.date() }}</td>
+            <td>{{ form.id }}</td>
+            <td>{{ form.description }}</td>
+            <td>{{ form.name }}</td>
+            <td>{{ form.hostname }}</td>
+            <td>{{ form.ip }}</td>
+            <td>{{ form.date_created.strftime("%d/%m/%Y %H:%M:%S") }}</td>
             <td>
-                <a href="">Delete</a>
+                <a href="/delete/{{form.id}}">Delete</a>
                 <br>
-                <a href="">Update</a>
+                <a href="/update/{{form.id}}">Update</a>
             </td>
         </tr>
         {% endfor %}
     </table>
 
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
+    <form action="/form">
+        <input type="submit" value="Add Form">
     </form>
 </div>
 {% endblock %}
