--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,36 +1,4 @@
-body, html {
+body {
     margin: 0;
-    font-family: sans-serif;
-    background-color: rgb(225, 235, 239);
-}
-
-.content {
-    margin: 0 auto;
-    width: 1000px;
-}
-
-table, td, th {
-    border: 1px solid #aaa;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
-th {
-    height: 30px;
-}
-
-td {
-    text-align: center;
-    padding: 5px;
-}
-
-.form {
-    margin-top: 20px;
-}
-
-#content {
-    width: 70%;
+    font-family: sans-serif;    
 }
