--- a/templates/form.html
+++ b/templates/form.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block body %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="static/js/add_ip.js"></script>
+
 <div class="content">
     <form action="/form" method="POST">
         <p>description 
@@ -21,9 +24,16 @@
             <br>
             <input type="integer" name="hostname" />
         </p>
-        <p>ip 
-            <br>
-            <input type = "text" name = "ip" /><input type="submit" name="submit_button" value="Add">
+        <p>
+            <form method="POST">
+                <div class="input-wrapper">
+                    <div>IP(s) : <br/>
+                    <input type="text" name="ip[]" value=""/>
+                    <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
+                    </div>
+                </div>
+                <input type="submit" name="cmdsubmit">
+            </form>
         </p>
         <p>functions 
             <br>
