add extra ips to database

--- a/templates/form.html
+++ b/templates/form.html
@@ -24,16 +24,14 @@
             <br>
             <input type="integer" name="hostname" />
         </p>
-        <p>
-            <form method="POST">
+        <p>ip
+            <input type="text" name="ip" value=""/>
                 <div class="input-wrapper">
                     <div>IP(s) : <br/>
-                    <input type="text" name="ip[]" value=""/>
                     <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
                     </div>
                 </div>
                 <input type="submit" name="cmdsubmit">
-            </form>
         </p>
         <p>functions 
             <br>
