add update support for extra_ips

--- a/templates/update.html
+++ b/templates/update.html
@@ -15,6 +15,7 @@
             <p>name <input type = "text" name = "name" value="{{form.description}}" /></p>
             <p>hostname <input type = "integer" name = "hostname" value="{{form.hostname}}" /></p>
             <p>ip <input type = "text" name = "ip" value="{{form.ip}}" /></p>
+            <p>extra ips <input type = "text" name="extra_ips" value="{{form.extra_ips}}" /></p>
             <p>functions <input type = "text" name = "functions" value="{{form.functions}}" /></p>
             <p>subsystems <input type = "text" name = "subsystems" value="{{form.subsystems}}" /></p>
             <input type="submit" value="Update">
