--- a/templates/form.html
+++ b/templates/form.html
@@ -9,37 +9,33 @@
 <script src="static/js/add_ip.js"></script>
 
 <div class="content">
+    <h1 style="text-align: left">Create New Form</h1>
+
     <form action="/form" method="POST">
-        <p>description 
-            <br>
-            <textarea name = "description" id = "description" 
-                      rows = "6" cols = "60" style = "resize: none" >
+        <p>description<br>
+            <textarea name="description" id="description" 
+                      rows="6" cols="60" style="resize: none" >
             </textarea> 
         </p>
-        <p>name 
-            <br>
+        <p>name<br>
             <input type="text" name="name" />
         </p>
-        <p>hostname 
-            <br>
+        <p>hostname<br>
             <input type="integer" name="hostname" />
         </p>
-        <p>ip
+        <p>ip<br>
             <input type="text" name="ip" value=""/>
                 <div class="input-wrapper">
-                    <div>IP(s) : <br/>
+                    <div>extra ip
                     <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
                     </div>
                 </div>
-                <input type="submit" name="cmdsubmit">
         </p>
-        <p>functions 
-            <br>
-            <input type = "text" name = "functions" />
+        <p>functions<br>
+            <input type="text" name="functions" />
         </p>
-        <p>subsystems 
-            <br>
-            <input type = "text" name = "subsystems" />
+        <p>subsystems<br>
+            <input type="text" name="subsystems" />
         </p>
         <br>
         <input type="submit" name="submit_button" value="Finish">
