--- a/templates/index.html
+++ b/templates/index.html
@@ -41,5 +41,8 @@
         <input type="submit" value="Add Form">
     </form>
 
+    <form action="/dump">
+        <input type="submit" value="Dump Database">
+    </form>
 
 {% endblock %}
