--- a/templates/form.html
+++ b/templates/form.html
@@ -33,14 +33,14 @@
     <h1 style="text-align: left">Create New Form</h1>
 
     <form action="/form" name="theForm" method="POST">
-        <p>System Name<br>
+        <p>System's Name<br>
             <input type="text" name="name" required/>
         </p>
-        <p>Host Name<br>
+        <p>Hostname<br>
             <input type="integer" name="hostname" required/>
             <a href="#" onclick="return(validate());">Check Hostname</a>
         </p>
-        <p>IP (format: 1.1.1.1/24)<br>
+        <p>IP address  format: 1.1.1.1/24<br>
             <input type="text" name="ip" value="" required/>
                 <div class="input-wrapper">
                     <div>Extra IP Addresses
