--- a/templates/update.html
+++ b/templates/update.html
@@ -31,7 +31,7 @@
                         {% if d == form.distro %}
                             <option value="{{d}}" selected>{{d}}</option>
                         {% else %}
-                            <option value="{{d}}">{{d}}</option>"
+                            <option value="{{d}}">{{d}}</option>
                         {% endif %}
                     {% endfor %}
                 </select>
@@ -40,7 +40,7 @@
                 <textarea name="functions" rows="5" cols="60" required>{{form.functions}}</textarea>
             </p>
             <p>Subsystems<br>
-                <textarea name="subsystems" rows="5" cols="60" required>{{form.subsystems}}"</textarea>
+                <textarea name="subsystems" rows="5" cols="60" required>{{form.subsystems}}</textarea>
             </p>
             <input type="submit" value="Update">
         </form>
