--- a/templates/update.html
+++ b/templates/update.html
@@ -4,21 +4,30 @@
 <title>Update Form</title>
 {% endblock %}
 
-
 {% block body %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="{{  url_for('static', filename='js/add_ip.js') }}"></script>
+<script type="text/javascript" script id="ch" hosts="{{hosts}}" src="{{  url_for('static', filename='js/check_host.js') }}"></script>      
+
 <div class="content">
     <h1 style="text-align: left">Update Form</h1>
 
     <div>
-        <form action="/update/{{form.id}}" method="POST">
+        <form action="/update/{{form.id}}" name="theForm" method="POST">
             <p>System's Name<br>
                 <input type="text" name="name" value="{{form.name}}" />
             </p>
             <p>Hostname<br>
                 <input type="integer" name="hostname" value="{{form.hostname}}" />
+                <a href="#" onclick="return(validate());">Check Hostname</a>
             </p>
             <p>IP address  format: 1.1.1.1/24<br>
                 <input type="text" name="ip" value="{{form.ip}}" />
+                    <div class="input-wrapper">
+                        <div>Extra IP Addresses
+                        <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
+                        </div>
+                    </div>
             </p>
             <p>Extra IP addresses<br>
                 {% for exip in form.extra_ips %}
