add label for Finish Button

--- a/templates/form.html
+++ b/templates/form.html
@@ -56,9 +56,10 @@
         </section><br/>
 
         <section>
+            <label>To Submit Form, Click On ---> </label>
             <input type="submit" name="submit_button" value="Finish">
         </section>
-        
+
     </form>
 </div>
 
