--- a/templates/update.html
+++ b/templates/update.html
@@ -14,27 +14,36 @@
 
     <div>
         <form action="/update/{{form.id}}" name="theForm" method="POST">
-            <p>System's Name<br>
+            <section>
+                <h6>System's Name</h6>
                 <input type="text" name="name" value="{{form.name}}" />
-            </p>
-            <p>Hostname<br>
+            </section><br/>
+
+            <section>
+                <h6>Hostname</h6>
                 <input type="integer" name="hostname" value="{{form.hostname}}" />
                 <a href="#" onclick="return(validate());">Check Hostname</a>
-            </p>
-            <p>IP address  format: 1.1.1.1/24<br>
+            </section><br/>
+
+            <section>
+                <h6>IP address  format: 1.1.1.1/24</h6>
                 <input type="text" name="ip" value="{{form.ip}}" />
                     <div class="input-wrapper">
                         <div>Extra IP Addresses
                         <a href="javascript:void(0);" class="add-input" title="Add input">Add</a>
                         </div>
                     </div>
-            </p>
-            <p>Extra IP addresses<br>
+            </section>
+                   
+            <section>
+                <h6>Extra IP addresses</h6>
                 {% for exip in form.extra_ips %}
                 <input type="text" name="extra_ips[]" value="{{exip.extra_ip}}" />
                 {% endfor %}
-            </p>
-            <p>Server's Linux Distribution
+            </section><br/>
+
+            <section>
+                <h6>Server's Linux Distribution</h6>
                 <select name="distro" method="GET" action="/form">
                     {% for d in dirlist %}
                         {% if d == form.distro %}
@@ -44,14 +53,22 @@
                         {% endif %}
                     {% endfor %}
                 </select>
-            </p>
-            <p>System's Functions<br>
+            </section><br/>
+
+            <section>
+                <h6>System’s functions</h6>
                 <textarea name="functions" rows="5" cols="60" required>{{form.functions}}</textarea>
-            </p>
-            <p>Subsystems<br>
+            </section><br/>
+
+            <section>
+                <h6>Subsystems</h6>
                 <textarea name="subsystems" rows="5" cols="60" required>{{form.subsystems}}</textarea>
-            </p>
-            <input type="submit" value="Update">
+            </section><br/>
+
+            <section>
+                <label>To Update Form, Click On ---> </label>
+                <input type="submit" value="Update">
+            </section>
         </form>
     </div>
 
