--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav style="text-align: center">
         <a href="{{ url_for('index') }}">Main</a>
-        <a href="#">Clusters</a>
+        <a href="{{ url_for('cluster') }}">Clusters</a>
         <a href="#">About</a>
     </nav>
     <hr/>
