--- a/templates/base.html
+++ b/templates/base.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-                           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
-                           crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	
     {% block head %}{% endblock %}
 </head>
 <body>
-    <nav style="text-align: center">
-        <a href="{{ url_for('index') }}">Main</a>
-        <a href="{{ url_for('cluster') }}">Clusters</a>
-        <a href="#">About</a>
-    </nav>
-    <hr/>
+    <div class="jumbotron text-center">
+        <nav style="text-align: center">
+            <a href="{{ url_for('index') }}">Main</a>
+            <a href="{{ url_for('cluster') }}">Clusters</a>
+            <a href="#">About</a>
+        </nav>
+    </div>
     {% block body %}{% endblock %}
 </body>
 </html>
