--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,20 @@
 {% block body %}
 <div class="content">
     <h1 style="text-align: center">Infra Forms</h1>
+
+    <div class="button-container">
+        <form action="/form">
+            <dev style="position: relative; left: 39%;">
+                <input type="submit" value="Add Form">
+            </dev>
+        </form>
+    
+        <form action="/dump">
+            <div style="position: relative; left: 40%;">
+                <input type="submit" value="Dump Database">
+            </div>
+        </form>
+    </div>
     <hr/>
     
     <table>
@@ -34,14 +48,5 @@
         </tr>
         {% endfor %}
     </table>
-
-
-    <form action="/form">
-        <input type="submit" value="Add Form">
-    </form>
-
-    <form action="/dump">
-        <input type="submit" value="Dump Database">
-    </form>
 
 {% endblock %}
