add buttons with bootstrap instead of input

--- a/templates/form.html
+++ b/templates/form.html
@@ -22,7 +22,7 @@
         <section>
             <h5>Hostname</h5>
             <input type="integer" name="hostname" required/>
-            <a href="#" onclick="return(validate());">Check Hostname</a>
+            <button type="submit" onclick="return(validate());" class="btn btn-primary btn-sm">Check Hostname</button>
         </section><br/>
 
         <section>
@@ -56,8 +56,7 @@
         </section><br/>
 
         <section>
-            <label>To Submit Form, Click On ---> </label>
-            <input type="submit" name="submit_button" value="Finish">
+            <button type="submit" class="btn btn-primary">Submit</button>
         </section>
 
     </form>
