--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
     <div class="button-container">
         <form action="/form">
             <dev style="position: relative; left: 39%;">
-                <input type="submit" value="Add Form">
+                <button type="submit" class="btn btn-primary">Add Form</button>
             </dev>
         </form>
     
         <form action="/dump">
             <div style="position: relative; left: 40%;">
-                <input type="submit" value="Dump Database">
+                <button type="submit" class="btn btn-primary">Dump Database</button>
             </div>
         </form>
     </div>
