--- a/templates/update.html
+++ b/templates/update.html
@@ -23,7 +23,7 @@
             <section>
                 <h5>Hostname</h5>
                 <input type="integer" name="hostname" value="{{form.hostname}}" />
-                <a href="#" onclick="return(validate());">Check Hostname</a>
+                <button type="submit" onclick="return(validate());" class="btn btn-primary btn-sm">Check Hostname</button>
             </section><br/>
 
             <section>
@@ -67,8 +67,7 @@
             </section><br/>
 
             <section>
-                <label>To Update Form, Click On ---> </label>
-                <input type="submit" value="Update">
+                <button type="submit" class="btn btn-primary">Update</button>
             </section>
         </form>
     </div>
