add cluster field to AddForm

--- a/templates/form.html
+++ b/templates/form.html
@@ -26,6 +26,11 @@
         </section><br/>
 
         <section>
+            <h5>Cluster Affiliation</h5>
+            <input type="text" name="cluster_belong"/>
+        </section><br/>
+
+        <section>
             <h5>IP address  format: 1.1.1.1/24</h5>
             <input type="text" name="ip" value="" required/>
                 <div class="input-wrapper">
