--- a/templates/update.html
+++ b/templates/update.html
@@ -27,6 +27,11 @@
             </section><br/>
 
             <section>
+                <h5>Cluster Affiliation</h5>
+                <input type="text" name="cluster_belong" value="{{form.cluster_belong}}" />
+            </section><br/>
+
+            <section>
                 <h5>IP address  format: 1.1.1.1/24</h5>
                 <input type="text" name="ip" value="{{form.ip}}" />
                     <div class="input-wrapper">
