--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,8 +11,9 @@
 
 nav a {
     color: rgb(43, 119, 232);
-    font-size: 1.8em;
-    margin-left: 50px;
+    font-size: 2.8em;
+    font-family: "Times New Roman", Times, serif;
+    margin-left: 60px;
     text-decoration: none;
 }
 
