add update method for cluster

--- a/templates/cluster.html
+++ b/templates/cluster.html
@@ -41,7 +41,7 @@
             <td>
                 <a href="/cluster_delete/{{cluster.id}}" onclick="return confirm('Are you sure you want to DELETE Cluster {{ cluster.id }}?')">Delete</a>
                 <br>
-                <a href="#">Update</a>
+                <a href="/cluster_update/{{cluster.id}}">Update</a>
             </td>
         </tr>
         {% endfor %}
