--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Host</th>
+            <th>Cluster</th>
             <th>IP</th>
             <th>Date</th>
             <th>Actions</th>
@@ -38,6 +39,7 @@
             <td>{{ form.id }}</td>
             <td>{{ form.name }}</td>
             <td>{{ form.hostname }}</td>
+            <td>{{ form.cluster_belong }}</td>
             <td>{{ form.ip }}</td>
             <td>{{ form.date_created.strftime("%d/%m/%Y %H:%M:%S") }}</td>
             <td>
