--- a/templates/update.html
+++ b/templates/update.html
@@ -7,7 +7,9 @@
 {% block body %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="{{  url_for('static', filename='js/add_ip.js') }}"></script>
-<script type="text/javascript" script id="ch" hosts="{{hosts}}" src="{{  url_for('static', filename='js/check_host.js') }}"></script>      
+<script type="text/javascript" script id="ch" hosts="{{hosts}}" src="{{ url_for('static', filename='js/check_host.js') }}"></script>  
+<script type="text/javascript" script id="gc" cluster_data="{{cluster_data}}" src="{{ url_for('static', filename='js/get_cluster.js') }}"></script>
+
 
 <div class="content">
     <h1 style="text-align: left">Update Form</h1>
@@ -28,7 +30,13 @@
 
             <section>
                 <h5>Cluster Affiliation</h5>
-                <input type="text" name="cluster_belong" value="{{form.cluster_belong}}" />
+                <input type="text" name="cluster_belong" value="{{form.cluster_belong}}" list="cluster_list"/>
+                <datalist id="cluster_list">
+                    {% for c in clusters %}
+                    <option value="{{c}}">{{c}}</option>
+                    {% endfor %}
+                </datalist>
+                <button type="submit" onclick="return(get_cluster());" class="btn btn-primary btn-sm">Get Cluster</button>
             </section><br/>
 
             <section>
