--- a/templates/update.html
+++ b/templates/update.html
@@ -25,7 +25,7 @@
             <section>
                 <h5>Hostname</h5>
                 <input type="integer" name="hostname" value="{{form.hostname}}" />
-                <button type="submit" onclick="return(validate());" class="btn btn-primary btn-sm">Check Hostname</button>
+                <button type="button" onclick="return(validate());" class="btn btn-primary btn-sm">Check Hostname</button>
             </section><br/>
 
             <section>
@@ -36,7 +36,7 @@
                     <option value="{{c}}">{{c}}</option>
                     {% endfor %}
                 </datalist>
-                <button type="submit" onclick="return(get_cluster());" class="btn btn-primary btn-sm">Get Cluster</button>
+                <button type="button" onclick="return(get_cluster());" class="btn btn-primary btn-sm">Get Cluster</button>
             </section><br/>
 
             <section>
@@ -82,6 +82,7 @@
             <section>
                 <button type="submit" class="btn btn-primary">Update</button>
             </section>
+
         </form>
     </div>
 
