simpify get_cluster.js

--- a/templates/form.html
+++ b/templates/form.html
@@ -59,12 +59,12 @@
 
         <section>
             <h5>System’s functions</h5>
-            <textarea name="functions" id="sf" rows="5" cols="60" required></textarea>
+            <textarea name="functions" rows="5" cols="60" required></textarea>
         </section><br/>
 
         <section>
             <h5>Subsystems</h5>
-            <textarea name="subsystems" id ="ss" rows="5" cols="60" required></textarea>
+            <textarea name="subsystems" rows="5" cols="60" required></textarea>
         </section><br/>
 
         <section>
