add two more organizational levels

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <div class="jumbotron text-center">
         <nav style="text-align: center">
             <a href="{{ url_for('index') }}">Main</a>
-            <a href="{{ url_for('cluster') }}">Clusters</a>
+            <a href="{{ url_for('cluster') }}">Org. Units</a>
             <a href="#">About</a>
         </nav>
     </div>
