upgrade Update method

--- a/templates/cluster_new.html
+++ b/templates/cluster_new.html
@@ -17,11 +17,11 @@
 
         <section>
             <h5>Unit Level</h5>
-            <input type="radio" id="cluster" name="unit_level" value="cluster">
+            <input type="radio" id="cluster" name="unit_level" value="cluster" required>
             <label for="cluster">Cluster</label>
-            <input type="radio" id="containerization" name="unit_level" value="containerization">
+            <input type="radio" id="containerization" name="unit_level" value="containerization" required>
             <label for="containerization">Containerization</label>
-            <input type="radio" id="pods" name="unit_level" value="pods">
+            <input type="radio" id="pods" name="unit_level" value="pods" required>
             <label for="pods">Pods</label>
         </section><br/>
 
