--- a/templates/cluster_update.html
+++ b/templates/cluster_update.html
@@ -11,12 +11,30 @@
 
     <form action="/cluster_update/{{ cluster.id }}" method="POST">
         <section>
-            <h5>Cluster Name</h5>
-            <input type="text" name="cluster" value="{{cluster.cluster}}"/>
-        </section>
+            <h5>Unit Name</h5>
+            <input type="text" name="unit_name" value="{{cluster.unit_name}}" required/>
+        </section><br/>
 
         <section>
-            <h5>Cluster Description</h5>
+            <h5>Unit Level</h5>
+            <input type="radio" id="cluster" name="unit_level" value="cluster" required>
+            <label for="cluster">Cluster</label>
+            <input type="radio" id="containerization" name="unit_level" value="containerization" required>
+            <label for="containerization">Containerization</label>
+            <input type="radio" id="pods" name="unit_level" value="pods" required>
+            <label for="pods">Pods</label>
+        </section><br/>
+
+        <section>
+            <h5>Level Details</h5>
+            <h5>Available Levels: Cluster > Containerization > Pods</h5>
+            <input type="text" name="cluster" value="{{cluster.cluster}}" required/>
+            <input type="text" name="containerization" value="{{cluster.containerization}}"/>
+            <input type="text" name="pods" value="{{cluster.pods}}" name="pods"/>
+        </section><br/>
+
+        <section>
+            <h5>Unit Description</h5>
             <textarea name="description" rows="5" cols="60">{{cluster.description}}</textarea>
         </section>
         <hr/>
