rename table column name

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <th>ID</th>
             <th>Name</th>
             <th>Host</th>
-            <th>Cluster</th>
+            <th>Unit</th>
             <th>IP</th>
             <th>Date</th>
             <th>Actions</th>
